test/end-to-end/compile-errors/extern-warnings.crow
main void()
	()

f void() bare, libc extern

f void() unsafe, libc extern

f void() summon, libc extern

f void() pure
	()
